Upgrade to Java 21 and switch to JSON