@@ -1,21 +1,17 @@
 package podsync;
 
-import java.io.BufferedInputStream;
-import java.io.BufferedOutputStream;
 import java.io.File;
-import java.io.FileInputStream;
 import java.io.FileOutputStream;
-import java.io.FileReader;
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.InputStreamReader;
 import java.io.OutputStream;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
-import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.StandardCopyOption;
 import java.text.DateFormat;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
@@ -31,12 +27,6 @@ import java.util.Map;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
-import javax.ws.rs.client.Client;
-import javax.ws.rs.client.ClientBuilder;
-import javax.ws.rs.core.EntityTag;
-import javax.ws.rs.core.HttpHeaders;
-import javax.ws.rs.core.MultivaluedMap;
-import javax.ws.rs.core.Response;
 import javax.xml.parsers.ParserConfigurationException;
 import javax.xml.parsers.SAXParserFactory;
 
@@ -45,16 +35,21 @@ import org.xml.sax.Attributes;
 import org.xml.sax.SAXException;
 import org.xml.sax.helpers.DefaultHandler;
 
-import us.bpsm.edn.Keyword;
-import us.bpsm.edn.parser.Parseable;
-import us.bpsm.edn.parser.Parser;
-import us.bpsm.edn.parser.Parsers;
+import jakarta.json.Json;
+import jakarta.json.JsonObject;
+import jakarta.json.JsonReader;
+import jakarta.ws.rs.client.Client;
+import jakarta.ws.rs.client.ClientBuilder;
+import jakarta.ws.rs.core.EntityTag;
+import jakarta.ws.rs.core.HttpHeaders;
+import jakarta.ws.rs.core.MultivaluedMap;
+import jakarta.ws.rs.core.Response;
 
 public class PodSync {
 
 	private static Logger log = Logger.getLogger("PodSync");
 
-	private final Map config;
+	private final JsonObject config;
 
 	/**
 	 * @param args
@@ -62,105 +57,110 @@ public class PodSync {
 	 */
 	public static void main(String[] args) throws IOException {
 
-		InputStream is = PodSync.class.getResourceAsStream("/config.edn");
-		Parseable parseable = Parsers.newParseable(new InputStreamReader(is, StandardCharsets.UTF_8));
-		Parser parser = Parsers.newParser(Parsers.defaultConfiguration());
-		Map config = (Map) parser.nextValue(parseable);
-
-		Map rssState = new HashMap<>();
-		File rsf = new File((String) config.get(Keyword.newKeyword("rssState")));
-		if(rsf.exists() && rsf.isFile()) {
-			Parseable rsp = Parsers.newParseable(new FileReader(rsf));
-			rssState = (Map) parser.nextValue(rsp);
+		JsonObject config = null;
+		try(InputStream is = PodSync.class.getResourceAsStream("/config.json");
+				JsonReader jr = Json.createReader(is)) {
+			config = jr.readObject();
 		}
-		PodSync ps = new PodSync(config, rssState);
+
+//		Map rssState = new HashMap<>();
+//		File rsf = new File((String) config.get(Keyword.newKeyword("rssState")));
+//		if(rsf.exists() && rsf.isFile()) {
+//			Parseable rsp = Parsers.newParseable(new FileReader(rsf));
+//			rssState = (Map) parser.nextValue(rsp);
+//		}
+
+		PodSync ps = new PodSync(config);
 		ps.run();
 	}
 
-	PodSync(Map config, Map rssState) throws IOException {
+	PodSync(JsonObject config) throws IOException {
 		this.config = config;
 	}
 
 	public void run() {
-		((List) config.get(Keyword.newKeyword("podcasts"))).parallelStream().forEach(p -> processPodcast(((Map)p)));
+		config.getJsonArray("podcasts").parallelStream().forEach(p -> processPodcast((JsonObject) p));
 	}
 
-	private void processPodcast(Map podcast) {
+	private void processPodcast(JsonObject podcast) {
 
 		List<Map> items = new ArrayList<>();
+
+		DefaultHandler handler = new DefaultHandler() {
+			DateFormat rfc822 = new SimpleDateFormat("EEE, dd MMM yyyy HH:mm:ss Z", Locale.US);
+			Map currentItem;
+			String currentValue;
+			Attributes currentAttributes;
+			int currentLevel;
+
+			@Override
+			public void startElement(String arg0, String arg1, String qName, Attributes attributes) throws SAXException {
+				if("item".equals(qName)) {
+					currentItem = new HashMap<>();
+				}
+				currentAttributes = attributes;
+				currentLevel++;
+				currentValue = "";
+			}
+			@Override
+			public void characters(char[] ch, int start, int length) throws SAXException {
+				currentValue += new String(ch, start, length);
+			}
+			@Override
+			public void endElement(String arg0, String arg1, String qName) throws SAXException {
+				currentLevel--;
+				switch(qName) {
+				case "item":
+					items.add(currentItem);
+					currentItem = null;
+					break;
+				case "title":
+					if(currentItem != null) currentItem.put(qName, currentValue);
+					break;
+				case "enclosure":
+					if(currentItem != null) {
+						try {
+							currentItem.put("url", new URL(currentAttributes.getValue("url")));
+							currentItem.put("length", Long.valueOf(currentAttributes.getValue("length").trim()));
+							currentItem.put("type", currentAttributes.getValue("type"));
+						} catch (MalformedURLException e) {
+						}
+					}
+					break;
+				case "pubDate":
+					if(currentItem != null) {
+						try {
+							Date d = rfc822.parse(currentValue);
+							currentItem.put(qName, d);
+						} catch (ParseException e) {
+							log.log(Level.SEVERE, "failed!", e);
+						}
+					}
+					break;
+				}
+			}
+		};
+
+		URI uri = null;
 		try {
-			DefaultHandler handler = new DefaultHandler() {
-				DateFormat rfc822 = new SimpleDateFormat("EEE, dd MMM yyyy HH:mm:ss Z", Locale.US);
-				Map currentItem;
-				String currentValue;
-				Attributes currentAttributes;
-				int currentLevel;
-
-				@Override
-				public void startElement(String arg0, String arg1, String qName, Attributes attributes) throws SAXException {
-					if("item".equals(qName)) {
-						currentItem = new HashMap<>();
-					}
-					currentAttributes = attributes;
-					currentLevel++;
-					currentValue = "";
-				}
-				@Override
-				public void characters(char[] ch, int start, int length) throws SAXException {
-					currentValue += new String(ch, start, length);
-				}
-				@Override
-				public void endElement(String arg0, String arg1, String qName) throws SAXException {
-					currentLevel--;
-					switch(qName) {
-					case "item":
-						items.add(currentItem);
-						currentItem = null;
-						break;
-					case "title":
-						if(currentItem != null) currentItem.put(qName, currentValue);
-						break;
-					case "enclosure":
-						if(currentItem != null) {
-							try {
-								currentItem.put("url", new URL(currentAttributes.getValue("url")));
-								currentItem.put("length", Long.valueOf(currentAttributes.getValue("length").trim()));
-								currentItem.put("type", currentAttributes.getValue("type"));
-							} catch (MalformedURLException e) {
-							}
-						}
-						break;
-					case "pubDate":
-						if(currentItem != null) {
-							try {
-								Date d = rfc822.parse(currentValue);
-								currentItem.put(qName, d);
-							} catch (ParseException e) {
-								log.log(Level.SEVERE, "failed!", e);
-							}
-						}
-						break;
-					}
-				}
-			};
-
 			Client client = ClientBuilder.newClient();
 
-			URL rss = new URL((String) podcast.get(Keyword.newKeyword("url")));
-			String username = (String) podcast.get(Keyword.newKeyword("username"));
-			String password = (String) podcast.get(Keyword.newKeyword("password"));
+			URI rss = URI.create(podcast.getString("url"));
+			String username = podcast.getString("username", null);
+			String password = podcast.getString("password", null);
 			String etag = null;
 			if(username != null && password != null) {
 				client.register(HttpAuthenticationFeature.basic(username, password));
 			}
-			URI uri = rss.toURI();
+
+			uri = rss;
 			loop:
 				for(;;) {
 					log.log(Level.INFO, "Fetching RSS feed from {0}", uri);
 					try(Response r = client.target(uri).request().header(HttpHeaders.IF_NONE_MATCH, etag).head()) {
 						log.log(Level.INFO, "result {0}", r.getStatus());
-						switch(Response.Status.fromStatusCode(r.getStatus())) {
-						case OK:
+						switch(r.getStatusInfo().getFamily()) {
+						case SUCCESSFUL:
 							try(Response rd = client.target(uri).request().header(HttpHeaders.IF_NONE_MATCH, etag).get()) {
 								if(rd.getStatus() == Response.Status.OK.getStatusCode()) {
 									EntityTag entityTag = rd.getEntityTag();
@@ -170,29 +170,36 @@ public class PodSync {
 								}
 							}
 							break;
-						case MOVED_PERMANENTLY:
-							//TODO: update config with new URI
-						case FOUND:
+						case REDIRECTION:
 							uri = r.getLocation();
-							log.log(Level.INFO, "redirect to {0}", uri);
-							continue loop;
-						case NOT_MODIFIED:
+							if(uri != null) {
+								log.log(Level.INFO, "redirect to {0}", uri);
+								continue loop;
+							}
+							log.log(Level.WARNING, "Redirection without location for {0}", uri);
+							return;
+						case CLIENT_ERROR:
+							log.log(Level.SEVERE, "Client error for {0} - Check your credentials! Ignoring for now", uri);
+							return;
+						case SERVER_ERROR:
+							log.log(Level.SEVERE, "Server error for {0} - ignoring for now", uri);
 							return;
 						}
 					}
 				}
-		} catch (IOException | SAXException | ParserConfigurationException | URISyntaxException e1) {
-			e1.printStackTrace();
+		} catch (jakarta.ws.rs.ProcessingException | IOException | SAXException | ParserConfigurationException e) {
+			log.log(Level.SEVERE, "Failed to fetch RSS " + uri, e);
 		}
 
 		Collections.sort(items, (i1, i2) -> ((Date)i2.get("pubDate")).compareTo((Date) i1.get("pubDate")));
 
-		File fromDir = new File((String) podcast.get(Keyword.newKeyword("fromDir")));
+		File fromDir = new File(podcast.getString("fromDir"));
 
 		// check input
 		if(fromDir.isDirectory() != true) {
-			log.log(Level.SEVERE, "fromDir is not a directory: {0}", fromDir);
-			return;
+			boolean r = fromDir.mkdir();
+			if(r) log.log(Level.SEVERE, "fromDir: {0} created", fromDir);
+			else return;
 		}
 
 		File[] fromDirFiles = fromDir.listFiles();
@@ -203,27 +210,47 @@ public class PodSync {
 			URL url = (URL) latestItem.get("url");
 			String[] segments = url.getPath().split("/");
 			String targetName = segments[segments.length - 1];
-			if(!Arrays.stream(fromDirFiles).anyMatch( f -> f.getName().equals(targetName))) {
-				log.log(Level.INFO, "Downloading {0} from {1}", new Object[] {targetName, url});
-				HttpURLConnection uc = followRedirects(url);
+//			if(!Arrays.stream(fromDirFiles).anyMatch( f -> f.getName().equals(targetName))) {
 				try(Response r = ClientBuilder.newClient().target(url.toURI()).request().head()) {
 					MultivaluedMap<String, Object> headers = r.getHeaders();
-					copy(uc.getInputStream(), new FileOutputStream(new File(fromDir, targetName)));
-				} catch (IOException | URISyntaxException e) {
-					e.printStackTrace();
+					File fromFile = new File(fromDir, targetName);
+					long remoteLength = Long.parseLong((String) headers.getFirst("content-length"));
+					long localLength = fromFile.isFile() ? fromFile.length() : 0;
+					if(localLength < remoteLength) {
+						log.log(Level.INFO, "Downloading {0} from {1} - local {2} remote {3}", new Object[] {targetName, url, localLength, remoteLength});
+						HttpURLConnection uc = followRedirects(url, localLength);
+						try(InputStream in = uc.getInputStream();
+							OutputStream out = new FileOutputStream(fromFile, true)) {
+							in.transferTo(out);
+						}
+					}
+				} catch (IOException | IllegalStateException | URISyntaxException e) {
+					log.log(Level.SEVERE, "Failed to downloading " + url, e);
+					return;
 				}
-			}
+//			}
 		}
 
 		// when toDir doesn't exist, only download
-		String td = (String) podcast.get(Keyword.newKeyword("toDir"));
+		String td = (String) podcast.getString("toDir");
 		if(td == null)
 			return;
 
 		File toDir = new File(td);
-		if(toDir.isDirectory() != true) {
-			log.log(Level.SEVERE, "toDir is not a directory: {0}", toDir);
+		File[] roots = File.listRoots();
+		boolean isMounted = Arrays.stream(roots).anyMatch(r -> r.toPath().getRoot().equals(toDir.toPath().getRoot()));
+		if(!isMounted) {
+			log.log(Level.SEVERE, "toDir is not mounted: {0}", toDir);
 			return;
+		}
+
+		if(!toDir.exists()) {
+			toDir.mkdir();
+		} else {
+			if(toDir.isDirectory() != true) {
+				log.log(Level.SEVERE, "toDir is not a directory: {0}", toDir);
+				return;
+			}
 		}
 
 		fromDirFiles = fromDir.listFiles();
@@ -278,12 +305,13 @@ public class PodSync {
 		}
 	}
 
-	private static HttpURLConnection followRedirects(URL url) {
+	private static HttpURLConnection followRedirects(URL url, long resumeLength) {
 		try {
 			HttpURLConnection.setFollowRedirects(true);
 			HttpURLConnection uc;
 			while(true) {
 				uc = (HttpURLConnection) url.openConnection();
+				uc.setRequestProperty("range", "bytes="+ resumeLength + "-");
 				int rc = uc.getResponseCode();
 				switch(rc) {
 				case HttpURLConnection.HTTP_MOVED_PERM:
@@ -293,6 +321,7 @@ public class PodSync {
 					url = next;
 					break;
 				case HttpURLConnection.HTTP_OK:
+				case HttpURLConnection.HTTP_PARTIAL:
 					return uc;
 				}
 			}
@@ -302,23 +331,12 @@ public class PodSync {
 		throw new IllegalStateException("couldn't retrieve URL " + url);
 	}
 
-	private static void copy(InputStream from, OutputStream to) throws IOException {
-		try(BufferedInputStream bis = new BufferedInputStream(from);
-			BufferedOutputStream bos = new BufferedOutputStream(to);) {
-			int b = bis.read();
-			while(b != -1) {
-				bos.write(b);
-				b = bis.read();
-			}
-		}
-	}
-
 	private static void copyFile(File fromFile, File toDir) throws IOException {
 		File toFile = new File(toDir.getAbsolutePath() + File.separator + fromFile.getName());
 
 		log.log(Level.INFO, "copy from \"{0}\" to \"{1}\"", new Object[] {fromFile.getAbsolutePath(), toFile.getAbsolutePath()});
 		try {
-			copy(new FileInputStream(fromFile), new FileOutputStream(toFile));
+			Files.copy(fromFile.toPath(), toFile.toPath(), StandardCopyOption.REPLACE_EXISTING);
 		} finally {
 			toFile.setLastModified(fromFile.lastModified());
 		}
